fix: contribute docs

--- a/content/docs/contribute.mdx
+++ b/content/docs/contribute.mdx
@@ -6,10 +6,8 @@ icon: Star
 Hey stresssssed dev, how's going on?
 
 I really appreciate if you give a star to the project [here](https://github.com/RossiFire/randomui). It's free and it helps me a lot.
-
-If you want to contribute you can fork the project and create a pull request from the [Github](https://github.com/RossiFire/randomui) page.
-
-
+Instead if you want to contribute you can fork the project and create a pull request from the [Github](https://github.com/RossiFire/randomui) page.
 If you really appreciate my work, you can also buy me a coffee at [Ko-fi](https://ko-fi.com/dnadaniele). Thank you!
 
 
+For any question, feel free to contact me on [Instagram](https://www.instagram.com/dna.iele/).
