ref: docs + demo improvements

--- a/content/docs/components/cclock.mdx
+++ b/content/docs/components/cclock.mdx
@@ -490,3 +490,11 @@ import CClock from "@/components/cclock";
 ```tsx
 <CClock />
 ```
+
+Counter example:
+```typescript
+import ClockCounter from "@/components/cclock-counter";
+```
+```tsx
+<ClockCounter value={value} />
+```
