--- a/content/docs/components/markee.mdx
+++ b/content/docs/components/markee.mdx
@@ -1,25 +1,26 @@
 ---
 title: Markee
-description: A powerful and native marquee component
+description: A powerful and composable marquee component built with compound components pattern
 hot_item: true
 ---
 
-<PageBadge badges={['tailwind', 'css' ]} />
+<PageBadge badges={['tailwind', 'css', 'react', 'nextjs']} />
 
-This component provides a native marquee effect, using just Tailwind and css.
-Moreover, it provides speed control, easing options and pause on hover functionality.
-It's fully responsive, width-adaptive and accessible.
-
-
+A performant, accessible marquee component built with React compound components. Features customizable animation speed, easing options, pause on hover, and optional fade effects. Fully responsive, width-adaptive, and WCAG compliant.
 
 ## Demo
 <MarqueeDemo />
 
 ## Installation
+
 Copy and paste the following code into your project.
-```tsx title="markee.tsx"
+
+```tsx title="components/markee.tsx"
 import * as React from "react";
 import { cn } from "@/lib/utils";
+
+const MarkeeContext = React.createContext<boolean>(false);
+const MarkeeContentContext = React.createContext<boolean>(false);
 
 interface MarkeeProps extends React.HTMLAttributes<HTMLDivElement> {
   /**
@@ -42,14 +43,83 @@ interface MarkeeProps extends React.HTMLAttributes<HTMLDivElement> {
    * @default false
    */
   pauseOnHover?: boolean;
-  /**
-   * Gap between items. Pass a string for static gap or an object for responsive breakpoints.
-   * @default "1rem"
-   * @example "2rem" - static gap
-   * @example { "0px": "1rem", "768px": "2rem", "1024px": "3rem" } - responsive gap
-   */
-  gap?: string | Record<string, string>;
 }
+
+interface MarkeeSpacerProps extends React.HTMLAttributes<HTMLDivElement> {}
+
+const MarkeeSpacer = React.forwardRef<HTMLDivElement, MarkeeSpacerProps>(
+  ({ className, ...props }, ref) => {
+    const isInContent = React.useContext(MarkeeContentContext);
+    
+    if (!isInContent) {
+      console.error("MarkeeSpacer must be used inside a MarkeeContent component");
+      return null;
+    }
+
+    return (
+      <div
+        ref={ref}
+        className={cn("shrink-0 w-4", className)}
+        aria-hidden="true"
+        {...props}
+      />
+    );
+  }
+);
+
+MarkeeSpacer.displayName = "MarkeeSpacer";
+
+interface MarkeeContentProps {
+  children?: React.ReactNode;
+}
+
+const MarkeeContent = ({ children }: MarkeeContentProps) => {
+  const isInMarkee = React.useContext(MarkeeContext);
+  
+  if (!isInMarkee) {
+    console.error("MarkeeContent must be used inside a Markee component");
+    return null;
+  }
+
+  return <>{children}</>;
+};
+
+MarkeeContent.displayName = "MarkeeContent";
+
+interface MarkeeFadeProps extends Omit<React.HTMLAttributes<HTMLDivElement>, "direction"> {
+  /**
+   * The direction of the fade effect
+   */
+  direction: "left" | "right";
+}
+
+const MarkeeFade = React.forwardRef<HTMLDivElement, MarkeeFadeProps>(
+  ({ className, direction, ...props }, ref) => {
+    const isInMarkee = React.useContext(MarkeeContext);
+    
+    if (!isInMarkee) {
+      console.error("MarkeeFade must be used inside a Markee component");
+      return null;
+    }
+
+    return (
+      <div
+        ref={ref}
+        aria-hidden="true"
+        className={cn(
+          "absolute top-0 h-full w-12 z-10 pointer-events-none",
+          direction === "left"
+            ? "left-0 bg-gradient-to-r from-background to-transparent"
+            : "right-0 bg-gradient-to-l from-background to-transparent",
+          className
+        )}
+        {...props}
+      />
+    );
+  }
+);
+
+MarkeeFade.displayName = "MarkeeFade";
 
 const Markee = React.forwardRef<HTMLDivElement, MarkeeProps>(
   (
@@ -60,27 +130,48 @@ const Markee = React.forwardRef<HTMLDivElement, MarkeeProps>(
       duration = 10,
       ease = "linear",
       pauseOnHover = false,
-      gap = "1rem",
       ...props
     },
     ref
   ) => {
-    const items = React.Children.toArray(children);
+    const fadeDirections = React.useRef<Set<"left" | "right">>(new Set());
+    
+    const flattenChildren = React.useCallback((nodes: React.ReactNode): React.ReactNode[] => {
+      return React.Children.toArray(nodes).flatMap((node) => {
+        if (React.isValidElement(node) && node.type === React.Fragment) {
+          const fragmentProps = node.props as { children?: React.ReactNode };
+          return flattenChildren(fragmentProps.children);
+        }
+        return node;
+      });
+    }, []);
 
-    const breakpointStyles = React.useMemo(() => {
-      const breakpoints =
-        typeof gap === "string"
-          ? { "0px": gap }
-          : { "0px": "1rem", ...gap };
+    const { fades, contentItems } = React.useMemo(() => {
+      const childrenArray = React.Children.toArray(children);
+      const fadesArray: React.ReactNode[] = [];
+      const contentArray: React.ReactNode[] = [];
+      
+      fadeDirections.current.clear();
 
-      return Object.entries(breakpoints)
-        .sort(([a], [b]) => parseInt(a) - parseInt(b))
-        .map(
-          ([key, value]) =>
-            `@media screen and (min-width: ${key}) { .marquee-container { --marquee-gap: ${value}; } }`
-        )
-        .join("\n");
-    }, [gap]);
+      React.Children.forEach(childrenArray, (child) => {
+        if (React.isValidElement(child)) {
+          if (child.type === MarkeeFade) {
+            const fadeProps = child.props as MarkeeFadeProps;
+            if (fadeDirections.current.has(fadeProps.direction)) {
+              console.error(`MarkeeFade with direction "${fadeProps.direction}" already exists in this Markee component`);
+            } else {
+              fadeDirections.current.add(fadeProps.direction);
+              fadesArray.push(child);
+            }
+          } else if (child.type === MarkeeContent) {
+            const props = child.props as MarkeeContentProps;
+            contentArray.push(...flattenChildren(props.children));
+          }
+        }
+      });
+
+      return { fades: fadesArray, contentItems: contentArray };
+    }, [children, flattenChildren]);
 
     const animationStyle = React.useMemo(
       () => ({
@@ -93,147 +184,183 @@ const Markee = React.forwardRef<HTMLDivElement, MarkeeProps>(
     );
 
     return (
-      <div
-        ref={ref}
-        className={cn(
-          "relative flex overflow-hidden max-w-fit marquee-container gap-[var(--marquee-gap)]",
-          pauseOnHover && "pause-on-hover",
-          className
-        )}
-        role="region"
-        aria-label="Marquee content"
-        aria-live="off"
-        {...props}
-      >
-        <div
-          aria-hidden="true"
-          className="absolute top-0 left-0 h-full w-12 bg-gradient-to-r from-fd-background to-transparent z-10 pointer-events-none"
-        />
-        <div
-          aria-hidden="true"
-          className="absolute top-0 right-0 h-full w-12 bg-gradient-to-l from-fd-background to-transparent z-10 pointer-events-none"
-        />
+      <MarkeeContext.Provider value={true}>
+        <MarkeeContentContext.Provider value={true}>
+          <div
+            ref={ref}
+            className={cn(
+              "relative flex overflow-hidden max-w-fit marquee-container",
+              pauseOnHover && "pause-on-hover",
+              className
+            )}
+            role="region"
+            aria-label="Scrolling content"
+            aria-live="polite"
+            {...props}
+          >
+            {fades}
+            
+            <ul
+              style={{
+                ...animationStyle,
+                animationName: "marquee-scroll",
+              }}
+              className="flex list-none shrink-0 justify-around min-w-full marquee-list"
+              role="list"
+            >
+              {contentItems.map((item, i) => (
+                <li key={i} role="listitem">
+                  {item}
+                </li>
+              ))}
+            </ul>
 
-        <ul
-          style={{
-            ...animationStyle,
-            animationName: "scroll",
-          }}
-          className="flex list-none shrink-0 justify-around gap-[var(--marquee-gap)] min-w-full marquee-list"
-        >
-          {items.map((item, i) => (
-            <li key={i} aria-label={`Marquee item ${i + 1}`}>
-              {item}
-            </li>
-          ))}
-        </ul>
-
-        <ul
-          aria-hidden="true"
-          className="flex list-none shrink-0 justify-around gap-[var(--marquee-gap)] min-w-full absolute top-0 left-0 marquee-list"
-          style={{
-            ...animationStyle,
-            animationName: "infinite-marquee-scroll",
-          }}
-        >
-          {items.map((item, i) => (
-            <li key={i} aria-label={`Marquee item ${i + 1}`}>
-              {item}
-            </li>
-          ))}
-        </ul>
-
-        <style jsx>{`
-          ${breakpointStyles}
-
-          .pause-on-hover:hover .marquee-list {
-            animation-play-state: paused;
-          }
-
-          @media (prefers-reduced-motion: reduce) {
-            .marquee-list {
-              animation-play-state: paused !important;
-            }
-          }
-
-          @keyframes scroll {
-            from {
-              transform: translateX(0);
-            }
-            to {
-              transform: translateX(calc(-100% - var(--marquee-gap)));
-            }
-          }
-
-          @keyframes infinite-marquee-scroll {
-            from {
-              transform: translateX(calc(100% + var(--marquee-gap)));
-            }
-            to {
-              transform: translateX(0);
-            }
-          }
-        `}</style>
-      </div>
+            <ul
+              aria-hidden="true"
+              style={{
+                ...animationStyle,
+                animationName: "marquee-scroll-infinite",
+              }}
+              className="flex list-none shrink-0 justify-around min-w-full absolute top-0 left-0 marquee-list"
+            >
+              {contentItems.map((item, i) => (
+                <li key={i}>
+                  {item}
+                </li>
+              ))}
+            </ul>
+          </div>
+        </MarkeeContentContext.Provider>
+      </MarkeeContext.Provider>
     );
   }
 );
 
 Markee.displayName = "Markee";
 
-export { Markee };
-export type { MarkeeProps };
+export { Markee, MarkeeSpacer, MarkeeFade, MarkeeContent };
+export type { MarkeeProps, MarkeeSpacerProps, MarkeeFadeProps, MarkeeContentProps };
 ```
 
 ## Usage
+
 ```typescript
-import Markee from "@/components/markee";
+import { 
+  Markee, 
+  MarkeeContent, 
+  MarkeeSpacer, 
+  MarkeeFade 
+} from "@/components/markee";
 ```
 
 ### Basic
+
+Wrap your content with `MarkeeContent` and place fade effects as direct children of `Markee`.
+
 ```tsx
 <Markee>
-  <WhateverYouWant />
-  <span>Item 1</span>
-  <span>Looooooong text</span>
-  <MyCustomComponent>
-</Markee>
-
-{/* You can also use multiple marquee in your page */}
-<Markee reverse={true}>
-  <WhateverYouWant />
-  <span>Item 1</span>
-  <span>Looooooong text</span>
-  <MyCustomComponent>
+  <MarkeeFade direction="left" />
+  <MarkeeContent>
+    <span>Item 1</span>
+    <span>Item 2</span>
+    <span>Item 3</span>
+  </MarkeeContent>
+  <MarkeeFade direction="right" />
 </Markee>
 ```
 
-### Custom width
+### With Spacers
+
+Use `MarkeeSpacer` to add spacing between items.
+
 ```tsx
-<Markee className="w-full md:w-1/2 lg:w-2/3">
-  <span>Item 1</span>
-  <span>Item 2</span>
+<Markee duration={20}>
+  <MarkeeFade direction="left" />
+  <MarkeeContent>
+    <TechBadge badge="nextjs" />
+    <MarkeeSpacer className="w-12" />
+    <TechBadge badge="react" />
+    <MarkeeSpacer className="w-12" />
+    <TechBadge badge="typescript" />
+  </MarkeeContent>
+  <MarkeeFade direction="right" />
 </Markee>
 ```
 
-### Custom gap
+### Dynamic Content
+
+The component handles dynamic content and nested fragments gracefully.
+
 ```tsx
-<Markee gap="2rem"> // Static gap
-  <span>Item 1</span>
-  <span>Item 2</span>
-</Markee>
+const items = [
+  <TechBadge badge="nextjs" />,
+  <TechBadge badge="react" />,
+  <TechBadge badge="typescript" />,
+];
 
-<Markee gap={{
-  "0px": "1rem",
-  "768px": "2rem",
-  "1024px": "3rem",
-}}> // Responsive gap based on screen size
-  <span>Item 1</span>
-  <span>Item 2</span>
+<Markee>
+  <MarkeeFade direction="left" />
+  <MarkeeContent>
+    {items.map((item, i) => (
+      <>
+        {item}
+        <MarkeeSpacer className="w-4" />
+      </>
+    ))}
+  </MarkeeContent>
+  <MarkeeFade direction="right" />
 </Markee>
 ```
 
-### With other props
+### Custom Width
+
+Control the marquee width using the `className` prop.
+
+```tsx
+<Markee className="w-full md:w-1/2 lg:w-1/3">
+  <MarkeeFade direction="left" />
+  <MarkeeContent>
+    <span>Item 1</span>
+    <span>Item 2</span>
+  </MarkeeContent>
+  <MarkeeFade direction="right" />
+</Markee>
+```
+
+### Custom Fade Width
+
+Customize fade effect width using `className` on `MarkeeFade`.
+
+```tsx
+<Markee>
+  <MarkeeFade direction="left" className="w-16" />
+  <MarkeeContent>
+    <span>Item 1</span>
+    <span>Item 2</span>
+  </MarkeeContent>
+  <MarkeeFade direction="right" className="w-16" />
+</Markee>
+```
+
+### Without Fades
+
+Fade effects are optional. You can use the marquee without them.
+
+```tsx
+<Markee reverse={true} duration={15} pauseOnHover={true}>
+  <MarkeeContent>
+    <span>Item 1</span>
+    <MarkeeSpacer className="w-8" />
+    <span>Item 2</span>
+    <MarkeeSpacer className="w-8" />
+    <span>Item 3</span>
+  </MarkeeContent>
+</Markee>
+```
+
+### Animation Options
+
+Control animation behavior with props.
 
 ```tsx
 <Markee 
@@ -242,19 +369,55 @@ import Markee from "@/components/markee";
   pauseOnHover={true}
   ease="ease-in-out"
 >
-  <span>Item 1</span>
-  <span>Item 2</span>
+  <MarkeeFade direction="left" />
+  <MarkeeContent>
+    <span>Item 1</span>
+    <span>Item 2</span>
+  </MarkeeContent>
+  <MarkeeFade direction="right" />
 </Markee>
 ```
 
-## Props
+## API Reference
 
-| Prop | Type | Default Value | Description |
+### Markee
+
+The root component that wraps the marquee functionality.
+
+| Prop | Type | Default | Description |
 |------|------|---------|-------------|
-| children | `ReactNode[]` | - | Items to display in the marquee |
-| className? | `string` | - | Additional classes for the marquee |
-| reverse? | `boolean` | false | Whether to reverse the animation |
-| duration? | `number` | 10 | The duration of the animation in seconds |
-| pauseOnHover? | `boolean` | false | Whether to pause the animation on hover |
-| ease? | `"linear"` \| `"ease"` \| `"ease-in"` \| `"ease-out"` \| `"ease-in-out"` | linear | Control timing function of the animation |
-| gap? | `string` \| `Record<string, string>` | 1rem | Gap between items for all screen sizes |
+| `reverse` | `boolean` | `false` | Whether to reverse the animation direction |
+| `duration` | `number` | `10` | Animation duration in seconds |
+| `pauseOnHover` | `boolean` | `false` | Whether to pause animation on hover |
+| `ease` | `"linear" \| "ease" \| "ease-in" \| "ease-out" \| "ease-in-out"` | `"linear"` | CSS animation timing function |
+| `className` | `string` | - | Additional CSS classes |
+| `children` | `ReactNode` | - | Must contain `MarkeeContent` and optionally `MarkeeFade` components |
+
+### MarkeeContent
+
+Wrapper component for marquee content. Must be used inside `Markee`.
+
+| Prop | Type | Default | Description |
+|------|------|---------|-------------|
+| `children` | `ReactNode` | - | Content items to display in the marquee |
+
+### MarkeeSpacer
+
+Component for adding spacing between items. Must be used inside `MarkeeContent`.
+
+| Prop | Type | Default | Description |
+|------|------|---------|-------------|
+| `className` | `string` | - | Additional CSS classes. Default includes `shrink-0 w-4` |
+
+### MarkeeFade
+
+Component for adding fade effects on the edges. Must be used inside `Markee` as a direct child.
+
+| Prop | Type | Default | Description |
+|------|------|---------|-------------|
+| `direction` | `"left" \| "right"` | - | Fade direction (required) |
+| `className` | `string` | - | Additional CSS classes. Default includes `w-12` |
+
+## Accessibility
+
+The component follows the WCAG 2.1 AA accessibility standards and ARIA best practices. It is fully accessible, with proper `role` and `aria-label` attributes, and `aria-live="polite"` for screen readers.
