wip: Markee refactoring

--- a/content/docs/components/markee.mdx
+++ b/content/docs/components/markee.mdx
@@ -22,7 +22,71 @@ import { cn } from "@/lib/utils";
 const MarkeeContext = React.createContext<boolean>(false);
 const MarkeeContentContext = React.createContext<boolean>(false);
 
-interface MarkeeProps extends React.HTMLAttributes<HTMLDivElement> {
+
+function Markee({ children, className,...props}: React.ComponentProps<"div">) {
+  return (
+    <MarkeeContext.Provider value={true}>
+      <div
+        data-slot="markee"
+        className={cn(
+          "relative flex overflow-hidden max-w-fit markee-container",
+          className
+        )}
+        role="region"
+        aria-label="Marquee content"
+        aria-live="polite"
+        {...props}
+      >
+      {children}
+      </div>
+    </MarkeeContext.Provider>
+  );
+}
+Markee.displayName = "Markee";
+
+function MarkeeFade({
+  className,
+  direction,
+  ...props
+}: React.ComponentProps<"div"> & { direction: "left" | "right" }) {
+  const isInMarkee = React.useContext(MarkeeContext);
+
+  if (!isInMarkee) {
+    console.error("MarkeeFade must be used inside a Markee component");
+    return null;
+  }
+
+  return (
+    <div
+      aria-hidden="true"
+      data-slot="markee-fade"
+      className={cn(
+        "absolute top-0 h-full w-12 z-10 pointer-events-none",
+        direction === "left"
+          ? "left-0 bg-gradient-to-r from-background to-transparent"
+          : "right-0 bg-gradient-to-l from-background to-transparent",
+        className
+      )}
+      {...props}
+    />
+  );
+}
+MarkeeFade.displayName = "MarkeeFade";
+
+function MarkeeSpacer({ className, ...props }: React.ComponentProps<"div">) {
+  return (
+    <div
+      data-slot="markee-spacer"
+      className={cn("shrink-0 w-4", className)}
+      aria-hidden="true"
+      aria-label="Marquee spacer"
+      {...props}
+    />
+  );
+}
+MarkeeSpacer.displayName = "MarkeeSpacer";
+
+interface MarkeeContentProps extends React.ComponentProps<"ul"> {
   /**
    * Whether to reverse the animation
    * @default false
@@ -44,231 +108,91 @@ interface MarkeeProps extends React.HTMLAttributes<HTMLDivElement> {
    */
   pauseOnHover?: boolean;
 }
-
-interface MarkeeSpacerProps extends React.HTMLAttributes<HTMLDivElement> {}
-
-const MarkeeSpacer = React.forwardRef<HTMLDivElement, MarkeeSpacerProps>(
-  ({ className, ...props }, ref) => {
-    const isInContent = React.useContext(MarkeeContentContext);
-    
-    if (!isInContent) {
-      console.error("MarkeeSpacer must be used inside a MarkeeContent component");
-      return null;
-    }
-
-    return (
-      <div
-        ref={ref}
-        className={cn("shrink-0 w-4", className)}
-        aria-hidden="true"
-        {...props}
-      />
-    );
-  }
-);
-
-MarkeeSpacer.displayName = "MarkeeSpacer";
-
-interface MarkeeContentProps {
-  children?: React.ReactNode;
-}
-
-const MarkeeContent = ({ children }: MarkeeContentProps) => {
+function MarkeeContent({ duration = 10, ease = "linear", reverse = false, pauseOnHover = false, className, ...props }: MarkeeContentProps) {
   const isInMarkee = React.useContext(MarkeeContext);
-  
+
   if (!isInMarkee) {
     console.error("MarkeeContent must be used inside a Markee component");
     return null;
   }
 
-  return <>{children}</>;
-};
+  const animationStyle = React.useMemo(
+    () => ({
+      animationDuration: `${duration}s`,
+      animationTimingFunction: ease,
+      animationDirection: reverse ? ("reverse" as const) : ("normal" as const),
+    }),
+    [duration, ease, reverse]
+  );
 
+
+  return <MarkeeContentContext.Provider value={true}>
+    <ul
+      data-slot="markee-content"
+      style={{ ...animationStyle }}
+      className={cn(
+        "flex shrink-0 justify-around min-w-full animate-markee-scroll [animation-iteration-count:infinite] motion-reduce:[animation-play-state:paused]", 
+        pauseOnHover && "[&:hover]:[animation-play-state:paused]",
+        className
+      )}
+      role="list"
+      aria-label="Marquee content list"
+      {...props}
+    />
+    
+    <ul
+      data-slot="markee-content-hidden"
+      style={{ ...animationStyle }}
+      className={cn(
+        "flex shrink-0 justify-around min-w-full absolute top-0 left-0 animate-markee-scroll-hidden [animation-iteration-count:infinite] motion-reduce:[animation-play-state:paused]", 
+        pauseOnHover && "[&:hover]:[animation-play-state:paused]", 
+        className
+      )}
+      {...props}
+      aria-hidden="true"
+    />
+  </MarkeeContentContext.Provider>;
+}
 MarkeeContent.displayName = "MarkeeContent";
 
-interface MarkeeFadeProps extends Omit<React.HTMLAttributes<HTMLDivElement>, "direction"> {
-  /**
-   * The direction of the fade effect
-   */
-  direction: "left" | "right";
+function MarkeeItem({ ...props }: React.ComponentProps<"li">) {
+  return <li 
+  data-slot="markee-item"
+  role="listitem" 
+  aria-label="Marquee item"
+  {...props} />;
 }
+MarkeeItem.displayName = "MarkeeItem";
 
-const MarkeeFade = React.forwardRef<HTMLDivElement, MarkeeFadeProps>(
-  ({ className, direction, ...props }, ref) => {
-    const isInMarkee = React.useContext(MarkeeContext);
-    
-    if (!isInMarkee) {
-      console.error("MarkeeFade must be used inside a Markee component");
-      return null;
+export { Markee, MarkeeSpacer, MarkeeFade, MarkeeContent, MarkeeItem };
+export type { MarkeeContentProps };
+```
+
+Add the following CSS to your global stylesheet:
+
+```css title="app/global.css"
+@theme {
+  --animate-markee-scroll: markee-scroll;
+  --animate-markee-scroll-hidden: markee-scroll-hidden;
+
+  @keyframes markee-scroll {
+    from {
+      transform: translateX(0);
     }
-
-    return (
-      <div
-        ref={ref}
-        aria-hidden="true"
-        className={cn(
-          "absolute top-0 h-full w-12 z-10 pointer-events-none",
-          direction === "left"
-            ? "left-0 bg-gradient-to-r from-background to-transparent"
-            : "right-0 bg-gradient-to-l from-background to-transparent",
-          className
-        )}
-        {...props}
-      />
-    );
+    to {
+      transform: translateX(-100%);
+    }
   }
-);
 
-MarkeeFade.displayName = "MarkeeFade";
-
-const Markee = React.forwardRef<HTMLDivElement, MarkeeProps>(
-  (
-    {
-      children,
-      className,
-      reverse = false,
-      duration = 10,
-      ease = "linear",
-      pauseOnHover = false,
-      ...props
-    },
-    ref
-  ) => {
-    const fadeDirections = React.useRef<Set<"left" | "right">>(new Set());
-    
-    const flattenChildren = React.useCallback((nodes: React.ReactNode): React.ReactNode[] => {
-      return React.Children.toArray(nodes).flatMap((node) => {
-        if (React.isValidElement(node) && node.type === React.Fragment) {
-          const fragmentProps = node.props as { children?: React.ReactNode };
-          return flattenChildren(fragmentProps.children);
-        }
-        return node;
-      });
-    }, []);
-
-    const { fades, contentItems } = React.useMemo(() => {
-      const childrenArray = React.Children.toArray(children);
-      const fadesArray: React.ReactNode[] = [];
-      const contentArray: React.ReactNode[] = [];
-      
-      fadeDirections.current.clear();
-
-      React.Children.forEach(childrenArray, (child) => {
-        if (React.isValidElement(child)) {
-          if (child.type === MarkeeFade) {
-            const fadeProps = child.props as MarkeeFadeProps;
-            if (fadeDirections.current.has(fadeProps.direction)) {
-              console.error(`MarkeeFade with direction "${fadeProps.direction}" already exists in this Markee component`);
-            } else {
-              fadeDirections.current.add(fadeProps.direction);
-              fadesArray.push(child);
-            }
-          } else if (child.type === MarkeeContent) {
-            const props = child.props as MarkeeContentProps;
-            contentArray.push(...flattenChildren(props.children));
-          }
-        }
-      });
-
-      return { fades: fadesArray, contentItems: contentArray };
-    }, [children, flattenChildren]);
-
-    const animationStyle = React.useMemo(
-      () => ({
-        animationDuration: `${duration}s`,
-        animationTimingFunction: ease,
-        animationIterationCount: "infinite" as const,
-        animationDirection: reverse ? ("reverse" as const) : ("normal" as const),
-      }),
-      [duration, ease, reverse]
-    );
-
-    return (
-      <MarkeeContext.Provider value={true}>
-        <MarkeeContentContext.Provider value={true}>
-          <div
-            ref={ref}
-            className={cn(
-              "relative flex overflow-hidden max-w-fit marquee-container",
-              pauseOnHover && "pause-on-hover",
-              className
-            )}
-            role="region"
-            aria-label="Scrolling content"
-            aria-live="polite"
-            {...props}
-          >
-            {fades}
-            
-            <ul
-              style={{
-                ...animationStyle,
-                animationName: "marquee-scroll",
-              }}
-              className="flex list-none shrink-0 justify-around min-w-full marquee-list"
-              role="list"
-            >
-              {contentItems.map((item, i) => (
-                <li key={i} role="listitem">
-                  {item}
-                </li>
-              ))}
-            </ul>
-
-            <ul
-              aria-hidden="true"
-              style={{
-                ...animationStyle,
-                animationName: "marquee-scroll-infinite",
-              }}
-              className="flex list-none shrink-0 justify-around min-w-full absolute top-0 left-0 marquee-list"
-            >
-              {contentItems.map((item, i) => (
-                <li key={i}>
-                  {item}
-                </li>
-              ))}
-            </ul>
-                        <style jsx>{`
-              .pause-on-hover:hover .marquee-list {
-                animation-play-state: paused;
-              }
-
-              @media (prefers-reduced-motion: reduce) {
-                .marquee-list {
-                  animation-play-state: paused !important;
-                }
-              }
-
-              @keyframes marquee-scroll {
-                from {
-                  transform: translateX(0);
-                }
-                to {
-                  transform: translateX(-100%);
-                }
-              }
-
-              @keyframes marquee-scroll-infinite {
-                from {
-                  transform: translateX(100%);
-                }
-                to {
-                  transform: translateX(0);
-                }
-              }
-            `}</style>
-          </div>
-        </MarkeeContentContext.Provider>
-      </MarkeeContext.Provider>
-    );
+  @keyframes markee-scroll-hidden {
+    from {
+      transform: translateX(100%);
+    }
+    to {
+      transform: translateX(0);
+    }
   }
-);
-
-Markee.displayName = "Markee";
-
-export { Markee, MarkeeSpacer, MarkeeFade, MarkeeContent };
-export type { MarkeeProps, MarkeeSpacerProps, MarkeeFadeProps, MarkeeContentProps };
+}
 ```
 
 ## Usage
@@ -278,21 +202,20 @@ import {
   Markee, 
   MarkeeContent, 
   MarkeeSpacer, 
-  MarkeeFade 
+  MarkeeFade,
+  MarkeeItem
 } from "@/components/markee";
 ```
 
 ### Basic
 
-Wrap your content with `MarkeeContent` and place fade effects as direct children of `Markee`.
-
 ```tsx
 <Markee>
   <MarkeeFade direction="left" />
   <MarkeeContent>
-    <span>Item 1</span>
-    <span>Item 2</span>
-    <span>Item 3</span>
+    <MarkeeItem>Item 1</MarkeeItem>
+    <MarkeeItem>Item 2</MarkeeItem>
+    <MarkeeItem>Item 3</MarkeeItem>
   </MarkeeContent>
   <MarkeeFade direction="right" />
 </Markee>
@@ -300,18 +223,15 @@ Wrap your content with `MarkeeContent` and place fade effects as direct children
 
 ### With Spacers
 
-Use `MarkeeSpacer` to add spacing between items.
-
 ```tsx
-<Markee duration={20}>
+<Markee>
   <MarkeeFade direction="left" />
-  <MarkeeContent>
-    <span>Item 1</span>
+  <MarkeeContent duration={20}>
+    <MarkeeItem>Item 1</MarkeeItem>
     <MarkeeSpacer className="w-12" />
-    <span>Item 2</span>
+    <MarkeeItem>Item 2</MarkeeItem>
     <MarkeeSpacer className="w-12" />
-    <span>Item 3</span>
-    <MarkeeSpacer className="w-12" />
+    <MarkeeItem>Item 3</MarkeeItem>
   </MarkeeContent>
   <MarkeeFade direction="right" />
 </Markee>
@@ -319,22 +239,17 @@ Use `MarkeeSpacer` to add spacing between items.
 
 ### Dynamic Content
 
-The component handles dynamic content and nested fragments gracefully.
-
 ```tsx
-const logos = [
-  <BrandLogo logo="logo_one" />,
-  <BrandLogo logo="logo_two" />,
-];
+const items = ["Item 1", "Item 2", "Item 3"];
 
 <Markee>
   <MarkeeFade direction="left" />
   <MarkeeContent>
-    {logos.map((logo, i) => (
-      <>
-        {logo}
+    {items.map((item, i) => (
+      <React.Fragment key={i}>
+        <MarkeeItem>{item}</MarkeeItem>
         <MarkeeSpacer className="w-4" />
-      </>
+      </React.Fragment>
     ))}
   </MarkeeContent>
   <MarkeeFade direction="right" />
@@ -343,14 +258,12 @@ const logos = [
 
 ### Custom Width
 
-Control the marquee width using the `className` prop.
-
 ```tsx
 <Markee className="w-full md:w-1/2 lg:w-1/3">
   <MarkeeFade direction="left" />
   <MarkeeContent>
-    <span>Item 1</span>
-    <span>Item 2</span>
+    <MarkeeItem>Item 1</MarkeeItem>
+    <MarkeeItem>Item 2</MarkeeItem>
   </MarkeeContent>
   <MarkeeFade direction="right" />
 </Markee>
@@ -358,14 +271,12 @@ Control the marquee width using the `className` prop.
 
 ### Custom Fade Width
 
-Customize fade effect width using `className` on `MarkeeFade`.
-
 ```tsx
 <Markee>
   <MarkeeFade direction="left" className="w-16" />
   <MarkeeContent>
-    <span>Item 1</span>
-    <span>Item 2</span>
+    <MarkeeItem>Item 1</MarkeeItem>
+    <MarkeeItem>Item 2</MarkeeItem>
   </MarkeeContent>
   <MarkeeFade direction="right" className="w-16" />
 </Markee>
@@ -373,35 +284,31 @@ Customize fade effect width using `className` on `MarkeeFade`.
 
 ### Without Fades
 
-Fade effects are optional. You can use the marquee without them.
-
 ```tsx
-<Markee reverse={true} duration={15} pauseOnHover={true}>
-  <MarkeeContent>
-    <span>Item 1</span>
+<Markee>
+  <MarkeeContent reverse={true} duration={15} pauseOnHover={true}>
+    <MarkeeItem>Item 1</MarkeeItem>
     <MarkeeSpacer className="w-8" />
-    <span>Item 2</span>
+    <MarkeeItem>Item 2</MarkeeItem>
     <MarkeeSpacer className="w-8" />
-    <span>Item 3</span>
+    <MarkeeItem>Item 3</MarkeeItem>
   </MarkeeContent>
 </Markee>
 ```
 
 ### Animation Options
 
-Control animation behavior with props.
-
 ```tsx
-<Markee 
-  reverse={true} 
-  duration={20} 
-  pauseOnHover={true}
-  ease="ease-in-out"
->
+<Markee>
   <MarkeeFade direction="left" />
-  <MarkeeContent>
-    <span>Item 1</span>
-    <span>Item 2</span>
+  <MarkeeContent 
+    reverse={true} 
+    duration={20} 
+    pauseOnHover={true}
+    ease="ease-in-out"
+  >
+    <MarkeeItem>Item 1</MarkeeItem>
+    <MarkeeItem>Item 2</MarkeeItem>
   </MarkeeContent>
   <MarkeeFade direction="right" />
 </Markee>
@@ -415,20 +322,30 @@ The root component that wraps the marquee functionality.
 
 | Prop | Type | Default | Description |
 |------|------|---------|-------------|
-| `reverse` | `boolean` | `false` | Whether to reverse the animation direction |
-| `duration` | `number` | `10` | Animation duration in seconds |
-| `pauseOnHover` | `boolean` | `false` | Whether to pause animation on hover |
-| `ease` | `"linear" \| "ease" \| "ease-in" \| "ease-out" \| "ease-in-out"` | `"linear"` | CSS animation timing function |
 | `className` | `string` | - | Additional CSS classes |
 | `children` | `ReactNode` | - | Must contain `MarkeeContent` and optionally `MarkeeFade` components |
 
 ### MarkeeContent
 
-Wrapper component for marquee content. Must be used inside `Markee`.
+Component that renders the scrolling content. Must be used inside `Markee`. Accepts all `ul` element props.
 
 | Prop | Type | Default | Description |
 |------|------|---------|-------------|
-| `children` | `ReactNode` | - | Content items to display in the marquee |
+| `reverse` | `boolean` | `false` | Whether to reverse the animation direction |
+| `duration` | `number` | `10` | Animation duration in seconds |
+| `pauseOnHover` | `boolean` | `false` | Whether to pause animation on hover |
+| `ease` | `"linear" \| "ease" \| "ease-in" \| "ease-out" \| "ease-in-out"` | `"linear"` | CSS animation timing function |
+| `className` | `string` | - | Additional CSS classes |
+| `children` | `ReactNode` | - | Content items (`MarkeeItem` and `MarkeeSpacer`) |
+
+### MarkeeItem
+
+Component for individual items in the marquee. Must be used inside `MarkeeContent`. Accepts all `li` element props.
+
+| Prop | Type | Default | Description |
+|------|------|---------|-------------|
+| `children` | `ReactNode` | - | Item content |
+| `className` | `string` | - | Additional CSS classes |
 
 ### MarkeeSpacer
 
@@ -449,4 +366,4 @@ Component for adding fade effects on the edges. Must be used inside `Markee` as 
 
 ## Accessibility
 
-The component follows the WCAG 2.1 AA accessibility standards and ARIA best practices. It is fully accessible, with proper `role` and `aria-label` attributes, and `aria-live="polite"` for screen readers.
+The component follows WCAG 2.1 AA accessibility standards and ARIA best practices. It includes proper `role` and `aria-label` attributes, and `aria-live="polite"` for screen readers. The component respects `prefers-reduced-motion` to pause animations for users who prefer reduced motion.
