fix(markee): use client directive

--- a/content/docs/components/markee.mdx
+++ b/content/docs/components/markee.mdx
@@ -16,6 +16,7 @@ A performant, accessible marquee component built with React compound components.
 Copy and paste the following code into your project.
 
 ```tsx title="components/markee.tsx"
+"use client";
 import * as React from "react";
 import { cn } from "@/lib/utils";
 
